--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
